# my_new_uav_basic_framework

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  STM32H743VITX_FLASH.ld  STM32H743VITX_RAM.ld  my_new_uav_baice_framework.ioc  内存使用说明文档.md
Bsp/: bsp_init.h  memory_section.h
Bsp/bsp_RTT/: bsp_RTT.c  bsp_RTT.h  bsp_RTT.md
Bsp/bsp_memory_section/: bsp_memory_section.c  bsp_memory_section.h
Bsp/bsp_mpu/: bsp_mpu.c  bsp_mpu.h
Bsp/bsp_ringbuffer/: bsp_ringbuffer.c  bsp_ringbuffer.h  bsp_ringbuffer.md
Bsp/bsp_spi/: bsp_spi.c  bsp_spi.h
Bsp/bsp_timestamp/: bsp_timestamp.c  bsp_timestamp.h
Bsp/bsp_uart/: bsp_uart.c  bsp_uart.h
Bsp/bsp_utils_seqlock/: bsp_utils_seqlock.h
Core/Inc/: FreeRTOSConfig.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Core/Src/: fdcan.c  freertos.c  gpio.c  main.c  sdmmc.c  stm32h7xx_it.c  syscalls.c  system_stm32h7xx.c  tim.c
Core/Startup/: startup_stm32h743vitx.s
FATFS/App/: fatfs.c
Modules/modules_Algorithm/user_math/: user_math.c  user_math.h
Modules/modules_BMI088/: modules_BMI088.c  modules_BMI088.h  modules_BMI088_reg.h
Modules/modules_BMI270/: modules_BMI270.c  modules_BMI270.h  modules_BMI270.md  modules_BMI270_config_file.h  modules_BMI270_reg.h
Modules/modules_Message_center/: modules_Message_center.c  modules_Message_center.h
Modules/modules_mtf02/: modules_mtf02.c  modules_mtf02.h
Modules/mudules_GPS_sensor/mudules_Microvoid_MG/: mudules_Microvoid_MG.c  mudules_Microvoid_MG.h
Modules/mudules_Remote_sensor/mudules_Sbus/: mudules_Sbus.c  mudules_Sbus.h
Modules/mudules_altitude_sensor/mudules_TFmini_Plus/: mudules_TFmini_Plus.c  mudules_TFmini_Plus.h
Modules/mudules_optical_flow_sensor/modules_mtf02/: modules_mtf02.h
